--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
 </head>
 
 <div class="topnav">
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="../docs/Breno_resume.pdf" download>Resume in PDF</a>
