--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <div class="topnav">
     <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="../docs/Breno_resume.pdf" download>Resume in PDF</a>
+    <a href="html/about.html">About</a>
+    <a href="html/contact.html">Contact</a>
+    <a href="docs/Breno_resume.pdf" download>Resume in PDF</a>
 </div>
 
 
