Added Projects page

--- a/html/about.html
+++ b/html/about.html
@@ -10,6 +10,7 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="../docs/Breno_resume.pdf" download>Resume in PDF</a>
+    <a href="projects.html" style="float: right;">Projects</a>
 </div>
 
 <body>
