--- a/html/projects.html
+++ b/html/projects.html
@@ -23,18 +23,12 @@
         github: <a href="https://github.com/brenoyr/personal" class="link" target="_blank">brenoyr</a>
     </p>
 
-    <h2 class="title"><br>Contact/Social Media</h2>
+
+    <h2 class="title"><br>Projects</h2>
 
     <ul>
-        <li class="list-item" style="padding-bottom:1em">Phone: (318) 592-2862 <br></li>
-        <li class="list-item" style="padding-bottom:1em">Email: breno.yr@gmail.com</li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://www.instagram.com/breno.yr/" class="link" target="_blank">Instagram</a></li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://www.facebook.com/breno.yamada/" class="link" target="_blank">Facebook</a></li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://www.linkedin.com/in/brenoyamada/" class="link" target="_blank">LinkedIn</a></li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://github.com/brenoyr/personal" class="link" target="_blank">GitHub</a></li>
-
+        <li class="list-item" style="padding-bottom:1em"><a href="collision.html" class="link">Spotify Web API Integration</a></li>
     </ul>
-
 </body>
 
 </html>
