--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="html/about.html">About</a>
     <a href="html/contact.html">Contact</a>
     <a href="docs/Breno_resume.pdf" download>Resume in PDF</a>
+    <a href="html/projects.html" style="float: right;">Projects</a>
 </div>
 
 
