--- a/html/collision.html
+++ b/html/collision.html
@@ -9,6 +9,7 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="../docs/Breno_resume.pdf" download>Resume in PDF</a>
+        <a href="projects.html" style="float: right;">Projects</a>
     </div>
 
     <body>
@@ -20,13 +21,14 @@
             <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
             LinkedIn: <a href="https://www.linkedin.com/in/brenoyamada/" class="link" target="_blank">brenoyamada</a> •
             github: <a href="https://github.com/brenoyr/personal" class="link" target="_blank">brenoyr</a>
+            <br><br><br>
         </p>
 
         <p class="description">
             Me, Cody Holland, Ethan Sanford, and Atmesh Acharya worked on a Spotify Integration with games for our Senior Capstone Project: <br><br>
             Using Spotify's Web API, we managed to make song requests in the user's behalf. <br>
             The goal was to help game developers by passing the cost to the user when it came to the game's soundtrack. <br><br>
-            It was a long project, so I love looking back and comparing the end result with what we had 1 week in. <br>
+            It was a long project, so I love looking back and comparing the end result with what we had after the first week. <br>
             We planned on making a demo game to showcase song requests. That would require recognizing game events, like collisions. <br>
             The first thing we had to show for was a small box game written in JavaScript that recognizes collisions. <br>
             You can check it out by clicking the Demo button below, then compare it to the end result at: <br><br>
