Quick target="_blank"

--- a/html/collision.html
+++ b/html/collision.html
@@ -33,7 +33,7 @@
             The first thing we had to show for was a small box game written in JavaScript that recognizes collisions. <br>
             You can check it out by clicking the Demo button below, then compare it to the end result at: <br><br>
             
-            <a href="https://spotify-web-integration.herokuapp.com" class="link">Spotify Web Integration</a> <br><br>
+            <a href="https://spotify-web-integration.herokuapp.com" class="link" target="_blank">Spotify Web Integration</a> <br><br>
 
         </p>
         
