added meta tags; changed red to purple

--- a/html/contact.html
+++ b/html/contact.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Breno Yamada Riquieri">
+    <meta name="description" content="contact">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
