--- a/html/collision.html
+++ b/html/collision.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Breno Yamada Riquieri">
+        <meta name="description" content="collision in JavaScript">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
         <link rel="stylesheet" href="../css/style.css">
     </head>
     
@@ -38,6 +42,8 @@
         </p>
         
         <a href="collision_demo.html" class="button">Demo</a>
+
+        <div><script src="../js/game.js"></script></div>
 
     </body>
 </html>
