--- a/html/collision_demo.html
+++ b/html/collision_demo.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Breno Yamada Riquieri">
+        <meta name="description" content="collision in JavaScript">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
         <link rel="stylesheet" href="../css/style.css">
-
         <style>
             canvas{
                 border:1px solid #d3d3d3;
