--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<!-- test -->
+
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Breno Yamada Riquieri">
+    <meta name="description" content="Personal Professional Website">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
