test resized banner

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 </div>
 
 
-<h1 id="header">Breno Yamada Riquieri</h1>
-
+<!-- <h1 id="header">Breno Yamada Riquieri</h1> -->
+<br>
+<center>
+<img src="/img/BREWNNNNENENEEINE-02.png" width="920" alt="Banner">
+</center>
 <p class="sub-header" style="text-align: center;">
     6440 Highway 559 • Columbia, LA 71418 • (318) 592-2862 •
     <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
