changed font size back

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
 <div class="topnav">
-    <a href="index.html" style="font-size: 1vw;">Home</a>
-    <a href="html/about.html" style="font-size: 1vw;">About</a>
-    <a href="html/contact.html" style="font-size: 1vw;">Contact</a>
-    <a href="docs/Breno_resume.pdf" style="font-size: 1vw;" download>Resume PDF</a>
-    <a href="html/projects.html" style="font-size: 1vw; float: right;">Projects</a>
+    <a href="index.html">Home</a>
+    <a href="html/about.html">About</a>
+    <a href="html/contact.html">Contact</a>
+    <a href="docs/Breno_resume.pdf" download>Resume PDF</a>
+    <a href="html/projects.html" style=" float: right;">Projects</a>
 </div>
 
 
