--- a/html/collision.html
+++ b/html/collision.html
@@ -40,10 +40,10 @@
             <a href="https://spotify-web-integration.herokuapp.com" class="link" target="_blank">Spotify Web Integration</a> <br><br>
 
         </p>
-        
         <a href="collision_demo.html" class="button">Demo</a>
+        
 
-        <div><script src="../js/game.js"></script></div>
+        <!-- <div><script src="../js/game.js"></script></div> -->
 
     </body>
 </html>
