--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- <h1 id="header">Breno Yamada Riquieri</h1> -->
 <br>
 <center>
-<img src="/img/BREWNNNNENENEEINE-02.png" width="920" alt="Banner">
+<img src="/img/BRENO AGORA VAI_Prancheta 1.png" width="1000" alt="Banner">
 <!-- <img src="/img/BREWNNNNENENEEINE-02.png" width="1500px" height="200px" alt="Banner"> -->
 </center>
 <p class="sub-header" style="text-align: center;">
