changed colors; started changing topnav

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
 <body>
 
-<div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="html/about.html">About</a>
-    <a href="html/contact.html">Contact</a>
-    <a href="docs/Breno_resume.pdf" download>Resume in PDF</a>
-    <a href="html/projects.html" style="float: right;">Projects</a>
-</div>
+<nav class="topnav">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="html/about.html">About</a></li>
+        <li><a href="html/contact.html">Contact</a></li>
+        <li><a href="docs/Breno_resume.pdf" download>Resume in PDF</a></li>
+        <li><a href="html/projects.html" style="float: right;">Projects</a></li>
+    </ul>
+</nav>
 
 
 <!-- <h1 id="header">Breno Yamada Riquieri</h1> -->
