Transitioned nav-bar to a ul

--- a/html/about.html
+++ b/html/about.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
-<div class="topnav">
-    <a href="../index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-    <a href="../docs/Breno_resume.pdf" download>Resume in PDF</a>
-    <a href="projects.html" style="float: right;">Projects</a>
-</div>
+<nav class="topnav">
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="../docs/Breno_resume.pdf" download>Resume in PDF</a></li>
+        <li><a href="projects.html" style="float: right; padding-right: 55px;">Projects</a></li>
+    </ul>
+</nav>
 
 <body>
     <h1 id="header">Breno Yamada Riquieri</h1>
