--- a/html/collision.html
+++ b/html/collision.html
@@ -8,13 +8,15 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
     
-    <div class="topnav">
-        <a href="../index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="../docs/Breno_resume.pdf" download>Resume in PDF</a>
-        <a href="projects.html" style="float: right;">Projects</a>
-    </div>
+    <nav class="topnav">
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../docs/Breno_resume.pdf" download>Resume in PDF</a></li>
+            <li><a href="projects.html" style="float: right; padding-right: 55px;">Projects</a></li>
+        </ul>
+    </nav>
 
     <body>
 
@@ -43,7 +45,7 @@
         
         <a href="collision_demo.html" class="button">Demo</a>
 
-        <div><script src="../js/game.js"></script></div>
+        <!-- <div><script src="../js/game.js"></script></div> -->
 
     </body>
 </html>
