--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="html/about.html">About</a></li>
         <li><a href="html/contact.html">Contact</a></li>
         <li><a href="docs/Breno_resume.pdf" download>Resume in PDF</a></li>
-        <li><a href="html/projects.html" style="float: right;">Projects</a></li>
+        <li><a href="html/projects.html" style="float: right; padding-right: 55px;">Projects</a></li>
     </ul>
 </nav>
 
@@ -25,7 +25,7 @@
 <!-- <h1 id="header">Breno Yamada Riquieri</h1> -->
 <br>
 <center>
-<img src="/img/BREWNNNNENENEEINE-02.png" width="920" alt="Banner">
+<img src="/img/BREWNNNNENENEEINE-02.png" width="90%" alt="Banner">
 </center>
 <p class="sub-header" style="text-align: center;">
     6440 Highway 559 • Columbia, LA 71418 • (318) 592-2862 •
@@ -40,13 +40,14 @@
 <p class="description">
     Bachelor of Science, Fall 2020 <br>
     Major: Computer Science | Concentration: Cyber Security | Minor: Mathematics <br>
-    GPA: 3.96 | CSC GPA: 4.0 | President’s List: Winter and Fall ‘18; Winter, Spring, and Fall ‘19; Winter and Spring ‘20
+    GPA: 3.96 | CSC GPA: 4.0 <span class="bold">Summa Cum Laude</span>
 </p>
 
 <h3 class="subtitle"> Moraine Valley Community College, Palos Hills, Illinois</h3>
 <p class="description">
     Associate of Science, Summer 2017 <br>
-    Major: Computer Science | GPA: 3.95, <span class="bold">Summa Cum Laude</span>
+    Major: Computer Science <br>
+    GPA: 3.95, <span class="bold">Summa Cum Laude</span>
 </p>
 
 <h2 class="title">Projects</h2>
