--- a/html/collision_demo.html
+++ b/html/collision_demo.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../css/style.css">
         <style>
             canvas{
+                width: 100%;
                 border:1px solid #d3d3d3;
                 background-color: #f1f1f1;
             }
