Updated some info and line spacing

--- a/html/projects.html
+++ b/html/projects.html
@@ -11,7 +11,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="../docs/Breno_resume.pdf" download>Resume in PDF</a></li>
-        <li><a href="projects.html" style="float: right; padding-right: 55px;">Projects</a></li>
+        <li><a href="projects.html" style="float: right; padding-right: 55px;">Projects &#11167</a></li>
     </ul>
 </nav>
 
@@ -19,12 +19,11 @@
     <h1 id="header">Breno Yamada Riquieri</h1>
 
     <p class="sub-header" style="text-align: center;">
-        6440 Highway 559 • Columbia, LA 71418 • (318) 592-2862 •
+        305 Wisteria St #6354 • Ruston, LA 71272 • (318) 592-2862 •
         <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
         LinkedIn: <a href="https://www.linkedin.com/in/brenoyamada/" class="link" target="_blank">brenoyamada</a> •
         github: <a href="https://github.com/brenoyr/personal" class="link" target="_blank">brenoyr</a>
     </p>
-
 
     <h2 class="title"><br>Projects</h2>
 
