--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
         <li><a href="html/about.html">About</a></li>
         <li><a href="html/contact.html">Contact</a></li>
         <li><a href="docs/Breno_resume.pdf" download>Resume in PDF</a></li>
-        <li><a href="html/projects.html" style="float: right; padding-right: 55px;">Projects</a></li>
+        <li><a href="html/projects.html">Projects &#11167</a>
+            <ul>
+                <li><a href="html/collision.html"></a>Spotify Web API</li>
+            </ul>
+        </li>
     </ul>
 </nav>
 
-
-<!-- <h1 id="header">Breno Yamada Riquieri</h1> -->
 <br>
 <center>
 <img src="/img/BREWNNNNENENEEINE-02.png" width="90%" alt="Banner">
 </center>
 <p class="sub-header" style="text-align: center;">
-    6440 Highway 559 • Columbia, LA 71418 • (318) 592-2862 •
+    305 Wisteria St #6354 • Ruston, LA 71272 • (318) 592-2862 •
     <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
     LinkedIn: <a href="https://www.linkedin.com/in/brenoyamada/" class="link" target="_blank">brenoyamada</a> •
     github: <a href="https://github.com/brenoyr/personal" class="link" target="_blank">brenoyr</a>
@@ -42,6 +44,7 @@
     Major: Computer Science | Concentration: Cyber Security | Minor: Mathematics <br>
     GPA: 3.96 | CSC GPA: 4.0 <span class="bold">Summa Cum Laude</span>
 </p>
+<br>
 
 <h3 class="subtitle"> Moraine Valley Community College, Palos Hills, Illinois</h3>
 <p class="description">
@@ -49,6 +52,7 @@
     Major: Computer Science <br>
     GPA: 3.95, <span class="bold">Summa Cum Laude</span>
 </p>
+<br>
 
 <h2 class="title">Projects</h2>
 <p class="description">
@@ -58,12 +62,13 @@
         <li class="list-item">(2018) Developed a basic version of the Snake Game in Python from scratch with new features</li>
     </ul>
 </p>
+<br>
 
 <h2 class="title">Experience</h2>
 
 <h3 class="subtitle">Louisiana Tech University, Residential Life — <span class="italics">Hall Director</span></h3>
 <p class="description">
-    May 2020 - Present
+    <p style="padding-bottom: 8px;">May 2020 - November 2020</p>
     <ul>
         <li class="list-item">Managed the staff and operations of Cottingham Hall</li>
         <li class="list-item">Served as the liaison between the Residential Life office and the student staff/residents</li>
@@ -72,10 +77,11 @@
         <li class="list-item">Managed the building over the Summer to make sure it is ready to receive residents for the school year</li>
     </ul>
 </p>
+<br>
 
 <h3 class="subtitle">Louisiana Tech University, Residential Life — <span class="italics">Resident Assistant</span></h3>
 <p class="description">
-    August 2019 - May 2020
+    <p style="padding-bottom: 8px;">August 2019 - May 2020</p>
     <ul>
         <li class="list-item">Responsible for a floor of 25 rooms, guaranteeing the well-being of 50 residents</li>
         <li class="list-item">Organized, developed, and lead communities around campus</li>
@@ -84,6 +90,7 @@
         <li class="list-item">Served as an active representative for Louisiana Tech University to the outside community</li>
     </ul>
 </p>
+<br>
 
 <h2 class="title">Skills and Activities</h2>
 <p class="description">
@@ -101,6 +108,7 @@
         <li class="list-item">Intramural basketball, volleyball, and softball</li>
     </ul>
 </p>
+<br>
 
 </body>
 </html> 
