Updated resume; Added transcripts

--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="html/about.html">About</a></li>
         <li><a href="html/contact.html">Contact</a></li>
-        <li><a href="docs/Breno_resume.pdf" download>Resume in PDF</a></li>
-        <li><a href="html/projects.html">Projects &#11167</a>
-            <ul>
+        <li><a href="docs/Breno_resume.pdf" download>Resume PDF</a></li>
+        <li><a href="docs/Breno_transcript.pdf" download>Transcripts PDF</a></li>
+        <li><a href="html/projects.html" style="float: right;">Projects</a></li>
+            <!-- <ul>
                 <li><a href="html/collision.html"></a>Spotify Web API</li>
-            </ul>
+            </ul> -->
         </li>
     </ul>
 </nav>
-
 <br>
-<center>
-<img src="/img/BREWNNNNENENEEINE-02.png" width="90%" alt="Banner">
-</center>
+
+<img src="/img/BREWNNNNENENEEINE-02.png" alt="Banner">
+<br>
+
 <p class="sub-header" style="text-align: center;">
     305 Wisteria St #6354 • Ruston, LA 71272 • (318) 592-2862 •
     <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
@@ -65,6 +66,18 @@
 <br>
 
 <h2 class="title">Experience</h2>
+
+<h3 class="subtitle">Louisiana Tech University, Residential Life — <span class="italics">IT Intern</span></h3>
+<p class="description">
+    <p style="padding-bottom: 8px;">January 2021 - Present</p>
+    <ul>
+        <li class="list-item">Worked with database management with the StarRez Portal, a SQL database platform</li>
+        <li class="list-item">Created reports through queries based on the Room Assignment Coordinator's needs</li>
+        <li class="list-item">Edited and created email templates through the StarRez HTML source code editor</li>
+        <li class="list-item">Available for assistance with Internet of Things issues from residential life affairs</li>
+    </ul>
+</p>
+<br>
 
 <h3 class="subtitle">Louisiana Tech University, Residential Life — <span class="italics">Hall Director</span></h3>
 <p class="description">
