--- a/html/projects.html
+++ b/html/projects.html
@@ -10,8 +10,9 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="../docs/Breno_resume.pdf" download>Resume in PDF</a></li>
-        <li><a href="projects.html" style="float: right; padding-right: 55px;">Projects &#11167</a></li>
+        <li><a href="../docs/Breno_resume.pdf" download>Resume PDF</a></li>
+        <li><a href="../docs/Breno_transcript.pdf" download>Transcripts PDF</a></li>
+        <li><a href="projects.html" style="float: right;">Projects</a></li>
     </ul>
 </nav>
 
