Added dropdown menu with hamburger on click

--- a/html/projects.html
+++ b/html/projects.html
@@ -2,7 +2,11 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Breno Yamada Riquieri">
+    <meta name="description" content="collision in JavaScript">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <nav class="topnav">
