--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <nav class="topnav">
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="html/about.html">About</a></li>
-        <li><a href="html/contact.html">Contact</a></li>
-        <li><a href="docs/Breno_resume.pdf" download>Resume PDF</a></li>
-        <li><a href="docs/Breno_transcript.pdf" download>Transcripts PDF</a></li>
-        <li><a href="html/projects.html" style="float: right;">Projects</a></li>
-        <!-- <ul>
-            <li><a href="html/collision.html"></a>Spotify Web API</li>
-        </ul> -->
-    </li>
-</ul>
+        <li><a href="../index.html" class="listItem">Home</a></li>
+        <li><a href="/html/about.html" class="listItem">About</a></li>
+        <li><a href="/html/contact.html" class="listItem">Contact</a></li>
+        <li><a href="/docs/Breno_resume.pdf" class="listItem" download>Resume PDF</a></li>
+        <li><a href="/docs/Breno_transcript.pdf" class="listItem" download>Transcripts PDF</a></li>
+        <li><a href="/html/projects.html" class="listItem">Projects</a></li>
+    </ul>
 </nav>
 <br>
 
@@ -122,5 +123,6 @@
     </p>
     <br>
 
+    <script src="js/app.js"></script>
 </body>
 </html> 
