--- a/html/contact.html
+++ b/html/contact.html
@@ -10,15 +10,21 @@
 </head>
 
 <nav class="topnav">
+    <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="../docs/Breno_resume.pdf" download>Resume PDF</a></li>
-        <li><a href="../docs/Breno_transcript.pdf" download>Transcripts PDF</a></li>
-        <li><a href="projects.html" style="float: right;">Projects</a></li>
+        <li><a href="../index.html" class="listItem">Home</a></li>
+        <li><a href="about.html" class="listItem">About</a></li>
+        <li><a href="contact.html" class="listItem">Contact</a></li>
+        <li><a href="../docs/Breno_resume.pdf" class="listItem" download>Resume PDF</a></li>
+        <li><a href="../docs/Breno_transcript.pdf" class="listItem" download>Transcripts PDF</a></li>
+        <li><a href="projects.html" class="listItem">Projects</a></li>
     </ul>
 </nav>
+<br>
 
 <body>
     <br>
@@ -43,6 +49,6 @@
 
     </ul>
 
+    <script src="../js/app.js"></script>
 </body>
-
 </html>
