added overlay for navbar

--- a/html/about.html
+++ b/html/about.html
@@ -60,6 +60,7 @@
         <p class="bold">Lastly, I love the satisfaction from working hard. This gladly translated to my GPA, and will definitely translate to the workspace. <br><br></p>
         
     </p>
+    <div class="overlay hidden"></div>
 
     <script src="../js/app.js"></script>
 </body>
