--- a/html/contact.html
+++ b/html/contact.html
@@ -1,54 +1,102 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Breno Yamada Riquieri" />
+    <meta name="description" content="contact" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  </head>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Breno Yamada Riquieri">
-    <meta name="description" content="contact">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-</head>
-
-<nav class="topnav">
+  <nav class="topnav">
     <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
     <ul>
-        <li><a href="../index.html" class="listItem">Home</a></li>
-        <li><a href="about.html" class="listItem">About</a></li>
-        <li><a href="contact.html" class="listItem">Contact</a></li>
-        <li><a href="../docs/Breno_resume.pdf" class="listItem" download>Resume PDF</a></li>
-        <li><a href="../docs/Breno_transcript.pdf" class="listItem" download>Transcripts PDF</a></li>
-        <li><a href="projects.html" class="listItem">Projects</a></li>
+      <li><a href="../index.html" class="listItem">Home</a></li>
+      <li><a href="about.html" class="listItem">About</a></li>
+      <li><a href="contact.html" class="listItem">Contact</a></li>
+      <li>
+        <a href="../docs/Breno_resume.pdf" class="listItem" download
+          >Resume PDF</a
+        >
+      </li>
+      <li>
+        <a href="../docs/Breno_transcript.pdf" class="listItem" download
+          >Transcripts PDF</a
+        >
+      </li>
+      <li><a href="projects.html" class="listItem">Projects</a></li>
     </ul>
-</nav>
-<br>
+  </nav>
+  <br />
 
-<body>
-    <br>
+  <body>
+    <br />
     <h1 id="header">Breno Yamada Riquieri</h1>
 
-    <p class="sub-header" style="text-align: center;">
-        305 Wisteria St #6354 • Ruston, LA 71272 • (318) 592-2862 •
-        <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
-        LinkedIn: <a href="https://www.linkedin.com/in/brenoyamada/" class="link" target="_blank">brenoyamada</a> •
-        github: <a href="https://github.com/brenoyr/personal" class="link" target="_blank">brenoyr</a>
+    <p class="sub-header" style="text-align: center">
+      305 Wisteria St #6354 • Ruston, LA 71272 • (318) 592-2862 •
+      <a href="mailto: breno.yr@gmail.com" class="link">breno.yr@gmail.com</a> •
+      LinkedIn:
+      <a
+        href="https://www.linkedin.com/in/brenoyamada/"
+        class="link"
+        target="_blank"
+        >brenoyamada</a
+      >
+      • github:
+      <a href="https://github.com/brenoyr/personal" class="link" target="_blank"
+        >brenoyr</a
+      >
     </p>
 
-    <h2 class="title"><br>Contact/Social Media</h2>
+    <h2 class="title"><br />Contact/Social Media</h2>
 
     <ul>
-        <li class="list-item" style="padding-bottom:1em">Phone: (318) 592-2862 <br></li>
-        <li class="list-item" style="padding-bottom:1em">Email: breno.yr@gmail.com</li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://www.instagram.com/breno.yr/" class="link" target="_blank">Instagram</a></li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://www.facebook.com/breno.yamada/" class="link" target="_blank">Facebook</a></li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://www.linkedin.com/in/brenoyamada/" class="link" target="_blank">LinkedIn</a></li>
-        <li class="list-item" style="padding-bottom:1em"><a href="https://github.com/brenoyr/personal" class="link" target="_blank">GitHub</a></li>
-
+      <li class="list-item" style="padding-bottom: 1em">
+        Phone: (318) 592-2862 <br />
+      </li>
+      <li class="list-item" style="padding-bottom: 1em">
+        Email: breno.yr@gmail.com
+      </li>
+      <li class="list-item" style="padding-bottom: 1em">
+        <a
+          href="https://www.instagram.com/breno.yr/"
+          class="link"
+          target="_blank"
+          >Instagram</a
+        >
+      </li>
+      <li class="list-item" style="padding-bottom: 1em">
+        <a
+          href="https://www.facebook.com/breno.yamada/"
+          class="link"
+          target="_blank"
+          >Facebook</a
+        >
+      </li>
+      <li class="list-item" style="padding-bottom: 1em">
+        <a
+          href="https://www.linkedin.com/in/brenoyamada/"
+          class="link"
+          target="_blank"
+          >LinkedIn</a
+        >
+      </li>
+      <li class="list-item" style="padding-bottom: 1em">
+        <a
+          href="https://github.com/brenoyr/personal"
+          class="link"
+          target="_blank"
+          >GitHub</a
+        >
+      </li>
     </ul>
+    <div class="overlay hidden"></div>
 
     <script src="../js/app.js"></script>
-</body>
+  </body>
 </html>
