--- a/html/test.html
+++ b/html/test.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Breno Yamada Riquieri" />
+    <meta name="description" content="collision in JavaScript" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Breno Yamada Riquieri">
-    <meta name="description" content="collision in JavaScript">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-
-<nav class="topnav">
+  <nav class="topnav">
     <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
     <ul>
-        <li><a href="../index.html" class="listItem">Home</a></li>
-        <li><a href="about.html" class="listItem">About</a></li>
-        <li><a href="contact.html" class="listItem">Contact</a></li>
-        <li><a href="../docs/Breno_resume.pdf" class="listItem" download>Resume PDF</a></li>
-        <li><a href="../docs/Breno_transcript.pdf" class="listItem" download>Transcripts PDF</a></li>
-        <li><a href="projects.html" class="listItem">Projects</a></li>
+      <li><a href="../index.html" class="listItem">Home</a></li>
+      <li><a href="about.html" class="listItem">About</a></li>
+      <li><a href="contact.html" class="listItem">Contact</a></li>
+      <li>
+        <a href="../docs/Breno_resume.pdf" class="listItem" download
+          >Resume PDF</a
+        >
+      </li>
+      <li>
+        <a href="../docs/Breno_transcript.pdf" class="listItem" download
+          >Transcripts PDF</a
+        >
+      </li>
+      <li><a href="projects.html" class="listItem">Projects</a></li>
     </ul>
-</nav>
-<br>
+  </nav>
+  <br />
 
-<body>
-    <img src="/img/BREWNNNNENENEEINE-02.png" alt="Banner">
+  <body>
+    <img src="/img/BREWNNNNENENEEINE-02.png" alt="Banner" />
+    <div class="overlay hidden"></div>
+
     <script src="../js/app.js"></script>
-</body>
-
+  </body>
 </html>
